// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NotificationItem /> renders with title and message 1`] = `
<div
  className="notification-item toast fade show"
>
  <div
    className="toast-header"
  >
    <span
      className="badge badge-pill badge-secondary mr-2 badge-primary"
    >
       
    </span>
    <strong
      className="mr-auto"
    >
      Test title
    </strong>
    <button
      aria-label="Close"
      className="ml-2 mb-1 close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <p
    className="toast-body"
  >
    Test message
  </p>
</div>
`;

exports[`<NotificationItem /> renders with title, message and custom type 1`] = `
<div
  className="notification-item toast fade show"
>
  <div
    className="toast-header"
  >
    <span
      className="badge badge-pill badge-secondary mr-2 badge-danger"
    >
       
    </span>
    <strong
      className="mr-auto"
    >
      Test title
    </strong>
    <button
      aria-label="Close"
      className="ml-2 mb-1 close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <p
    className="toast-body"
  >
    Test message
  </p>
</div>
`;

exports[`<NotificationItem /> renders without title 1`] = `
<div
  className="notification-item toast fade show"
>
  <div
    className="toast-header"
  >
    <span
      className="badge badge-pill badge-secondary mr-2 badge-primary"
    >
       
    </span>
    <strong
      className="mr-auto"
    />
    <button
      aria-label="Close"
      className="ml-2 mb-1 close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <p
    className="toast-body"
  >
    Test message
  </p>
</div>
`;
